# simverse-world

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml  skills_world_dev.db
backend/alembic/: env.py
backend/alembic/versions/: 002_add_search_and_reward_fields.py  003_foundation_upgrade.py  004_add_memories_table.py  005_add_home_tile_and_agent_fields.py  006_add_personality_history.py  007_add_daily_plan_fields.py  008_add_home_location_id.py  009_migrate_districts.py  (+3 more)
backend/app/: config.py  database.py  main.py
backend/seed/: preset_characters.py  seed_residents.py
backend/tests/: conftest.py  test_admin_config.py  test_admin_dashboard.py  test_admin_economy.py  test_admin_embeddings.py  test_admin_forge_monitor.py  test_admin_middleware.py  test_admin_residents.py  test_admin_users.py  test_agent_actions.py  test_agent_loop.py  test_agent_phases.py  test_agent_registry.py  test_agent_resident_model.py  test_agent_scheduler.py  test_agent_schemas.py  test_agent_tick_orchestrator.py  test_auth.py  test_coins.py  test_config_service.py  test_daily_reward.py  test_embedding.py  test_evolution_integration.py  test_forge.py  test_forge_pipeline.py  test_health.py  test_heat.py  test_home_assignment.py  test_import.py  test_linuxdo_auth.py  test_llm_factory.py  test_map_data.py  test_map_integration.py  test_media_chat_integration.py  test_media_config.py  test_media_service.py  test_media_upload.py  test_memory_chat_integration.py  test_memory_extraction.py  test_memory_model.py  (+28 more)
frontend/: index.html  (+2 more)
(+191 files in other folders)
